--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,5 +1,7 @@
 2012-05-11  Stefan Monnier  <monnier@iro.umontreal.ca>
 
+	* minibuffer.el (completion--twq-all): Again, allow case differences.
+
 	* term.el: Move keymap initialization code to be more idiomatic.
 	(term-signals-menu, term-mode-map, term-raw-map, term-raw-escape-map)
 	(term-terminal-menu): Move initialization into declaration.
