* Makefile.in (install-arch-indep): Remove dead code.
./lisp/simpl.ele never exists in the _build_ directory,
the Lisp files are always in the _source_ directory.
Even if they were not, it would be wrong to install just
*.el and *.elc, since there are subdirectories in lisp/.

--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,7 @@
 
 	* Makefile.in (install-arch-indep): There are no more Makefile.c files.
 	Use INSTALL_DATA for the DOC file.
+	Remove dead code for ./lisp that never executes.
 
 2012-05-10  Glenn Morris  <rgm@gnu.org>
 
