--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2012-05-12  Glenn Morris  <rgm@gnu.org>
+
+	* configure.in (AC_PROG_MKDIR_P): Call it, to set MKDIR_P.
+	(MKDEPDIR): Use $MKDIR_P.
+	* Makefile.in (MKDIR_P): New, set by configure.
+	(mkdir): Use $MKDIR_P.
+
 2012-05-11  Glenn Morris  <rgm@gnu.org>
 
 	* Makefile.in (install-arch-indep): There are no more Makefile.c files.
