--- a/doc/lispintro/ChangeLog
+++ b/doc/lispintro/ChangeLog
@@ -1,3 +1,8 @@
+2012-05-12  Glenn Morris  <rgm@gnu.org>
+
+	* Makefile.in (MKDIR_P): New, set by configure.
+	(mkinfodir): Use $MKDIR_P.
+
 2012-05-05  Glenn Morris  <rgm@gnu.org>
 
 	* emacs-lisp-intro.texi (Making Errors): Don't mention Emacs 20.
