--- a/doc/lispref/ChangeLog
+++ b/doc/lispref/ChangeLog
@@ -1,3 +1,8 @@
+2012-05-12  Glenn Morris  <rgm@gnu.org>
+
+	* Makefile.in (MKDIR_P): New, set by configure.
+	(mkinfodir): Use $MKDIR_P.
+
 2012-05-10  Glenn Morris  <rgm@gnu.org>
 
 	* loading.texi (Loading Non-ASCII): Replace the obsolete "unibyte: t"
