--- a/leim/ChangeLog
+++ b/leim/ChangeLog
@@ -1,3 +1,8 @@
+2012-05-12  Glenn Morris  <rgm@gnu.org>
+
+	* Makefile.in (MKDIR_P): New, set by configure.
+	(install): Use $MKDIR_P.
+
 2012-05-10  Glenn Morris  <rgm@gnu.org>
 
 	* Makefile.in: Install self-contained ns files directly to
