* doc/misc/Makefile.in (.SUFFIXES): Disable implicit rules. Fixes previous change.

--- a/doc/misc/ChangeLog
+++ b/doc/misc/ChangeLog
@@ -1,6 +1,7 @@
 2012-05-12  Glenn Morris  <rgm@gnu.org>
 
 	* Makefile.in (info.info): Rename from info, to avoid duplication.
+	(.SUFFIXES): Disable implicit rules.
 
 	* Makefile.in (MKDIR_P): New, set by configure.
 	(mkinfodir): Use $MKDIR_P.
