* buff-menu.el (Buffer-menu-buffer+size-width): Doc fix.

--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,7 @@
+2012-05-12  Chong Yidong  <cyd@gnu.org>
+
+	* buff-menu.el (Buffer-menu-buffer+size-width): Doc fix (Bug#11454).
+
 2012-05-11  Stefan Monnier  <monnier@iro.umontreal.ca>
 
 	* progmodes/prolog.el: Use SMIE.  Cleanup regexp setup.
