--- a/doc/misc/ChangeLog
+++ b/doc/misc/ChangeLog
@@ -1,3 +1,7 @@
+2012-05-12  Andreas Schwab  <schwab@linux-m68k.org>
+
+	* Makefile.in (gnus.dvi): Use $@ instead of $*.dvi.
+
 2012-05-02  Glenn Morris  <rgm@gnu.org>
 
 	* viper.texi: Make direntry shorter (also it is no longer "newest").
