--- a/doc/misc/ChangeLog
+++ b/doc/misc/ChangeLog
@@ -1,5 +1,8 @@
 2012-05-12  Andreas Schwab  <schwab@linux-m68k.org>
 
+	* cc-mode.texi: Avoid space before macro in 4th argument of cross
+	reference commands.  (Bug#11461)
+
 	* Makefile.in (gnus.dvi): Use $@ instead of $*.dvi.
 
 2012-05-02  Glenn Morris  <rgm@gnu.org>
