--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,8 @@
+2012-05-13  Michael Albinus  <michael.albinus@gmx.de>
+
+	* net/dbus.el (dbus-call-method): Restore events not from D-Bus.
+	(Bug#11447)
+
 2012-05-13  Stefan Monnier  <monnier@iro.umontreal.ca>
 
 	Move define-obsolete-variable-alias before the var's definition.
