--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,17 @@
+2012-05-13  Chong Yidong  <cyd@gnu.org>
+
+	* emacs-lisp/tabulated-list.el (tabulated-list-format)
+	(tabulated-list-entries, tabulated-list-padding)
+	(tabulated-list-sort-key): Make permanent-local.
+
+	* ebuff-menu.el: Adapt to Buffer Menu changes (Bug#11455).
+	(electric-buffer-list): Put electric buffer menu
+	command descriptions in this docstring, instead of the docstring
+	of electric-buffer-menu-mode.  Code cleanups.
+	(electric-buffer-menu-mode): Use define-derived-mode.  Rename from
+	Electric-buffer-menu-mode.
+	(electric-buffer-update-highlight): Minor code cleanup.
+
 2012-05-13  Michael Albinus  <michael.albinus@gmx.de>
 
 	* net/dbus.el (dbus-call-method): Restore events not from D-Bus.
