--- a/lisp/erc/ChangeLog
+++ b/lisp/erc/ChangeLog
@@ -1,3 +1,8 @@
+2012-05-13  Teemu Likonen  <tlikonen@iki.fi>
+
+	* erc-backend.el (erc-server-timestamp-format): New variable to
+	allow specifying the timestamp format (bug#10779).
+
 2012-04-11  Vivek Dasmohapatra  <vivek@etla.org>
 
 	* erc-services.el (erc-nickserv-passwords): Don't display the
