Make a self-contained ns build able to find its own libexec directory
Ref: http://lists.gnu.org/archive/html/emacs-devel/2012-05/msg00298.html

* src/nsterm.m (ns_init_paths):
Put "libexec" before "bin", for the sake of init_callproc_1.

--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,6 +1,7 @@
 2012-05-14  Glenn Morris  <rgm@gnu.org>
 
 	* nsterm.m (ns_init_paths): Fix typo ("libexec" not "lib-exec").
+	Put "libexec" before "bin", for the sake of init_callproc_1.
 
 2012-05-14  Paul Eggert  <eggert@cs.ucla.edu>
 
