--- a/lisp/url/ChangeLog
+++ b/lisp/url/ChangeLog
@@ -1,3 +1,9 @@
+2012-05-15  Ian Eure  <ian@simplegeo.com>
+
+	* url-util.el (url-build-query-string): New function.
+	(url-parse-query-string): Allow that '=' is not required and split
+	URL parameters on ';', not just '&'.
+
 2012-05-14  Lars Magne Ingebrigtsen  <larsi@gnus.org>
 
 	* url-expand.el (url-default-expander): Copy over the fullness of
