--- a/test/ChangeLog
+++ b/test/ChangeLog
@@ -1,3 +1,9 @@
+2012-05-15  Teodor Zlatanov  <tzz@lifelogs.com>
+
+	* automated/url-util-tests.el: New file to test
+	lisp/url/url-util.el.  Only `url-build-query-string' and
+	`url-parse-query-string' are tested right now (Bug#8706).
+
 2012-04-28  Stefan Monnier  <monnier@iro.umontreal.ca>
 
 	* indent/shell.sh:
