* Makefile.in (install-arch-dep): Do not hard-code version number.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2012-05-15  Glenn Morris  <rgm@gnu.org>
 
+	* Makefile.in (install-arch-dep): Do not hard-code version number.
+
 	* Makefile.in (install-arch-dep): NS install no longer needs to
 	symlink libexec/* into bin/, since 2012-05-14 ns_init_paths change.
 
